--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/luxon": "^3.4.2",
     "@types/node": "20.11.11",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "cheerio": "^1.0.0-rc.12",
+    "luxon": "^3.4.4",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
