--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "cheerio": "^1.0.0-rc.12",
+    "feed": "^4.2.2",
     "luxon": "^3.4.4",
     "next": "14.1.0",
     "react": "18.2.0",
