--- a/package.json
+++ b/package.json
@@ -1,24 +1,17 @@
 {
   "name": "framer-rss",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.2.0",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "netlify dev",
+    "build": "netlify build"
   },
   "dependencies": {
+    "@netlify/functions": "^2.8.1",
     "@types/luxon": "^3.4.2",
     "@types/node": "20.11.11",
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18",
     "cheerio": "^1.0.0-rc.12",
     "feed": "^4.2.2",
     "luxon": "^3.4.4",
-    "next": "14.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "typescript": "5.3.3"
   }
 }
